[gd_scene load_steps=4 format=3 uid="uid://cgir8at2gjnkc"]

[ext_resource type="Script" uid="uid://fg3a4j1ai28k" path="res://scripts/minigames/feed_minigame.gd" id="1_ansfs"]
[ext_resource type="Texture2D" uid="uid://bookuyu7wubkp" path="res://textures/minigames/eat/andreys_faces/BasicEat.png" id="2_lc4ts"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wyl2e"]
radius = 61.13101

[node name="FeedMiniGame" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ansfs")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.50980395)

[node name="AndreyFace" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 486.0
offset_bottom = 784.0
texture = ExtResource("2_lc4ts")

[node name="MouthArea" type="Area2D" parent="Control/AndreyFace"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/AndreyFace/MouthArea"]
position = Vector2(349, 196)
shape = SubResource("CircleShape2D_wyl2e")

[node name="FoodContainer" type="Node2D" parent="Control"]
position = Vector2(833, 400)
